--- a/src/page/mapAccess/MapAccess.css
+++ b/src/page/mapAccess/MapAccess.css
@@ -9,7 +9,28 @@ h1{
     justify-content: center;
 }
 
-#map{
+#map-parameters-container{
+    display: flex;
+    flex-flow: row;
+    justify-content: space-around;
+
     width: 80%;
     height: 80%;
+}
+
+#map {
+    width: 45%;
+    height: 100%;
+
+    padding: 1px;
+    border: 2px solid black;
+}
+
+
+#parameters {
+    width: 45%;
+    height: 100%;
+
+    padding: 5px;
+    border: 2px solid black;
 }
