--- a/src/App.css
+++ b/src/App.css
@@ -34,8 +34,8 @@ button {
 
 svg {
   display: block;
-  width: 33em;
-  height: 30em;
+  width: 100%;
+  height: 40vh;
   fill: var(--text-primary);
 }
 svg .region:hover {
