--- a/src/components/listStations/ListStations.css
+++ b/src/components/listStations/ListStations.css
@@ -2,7 +2,7 @@
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
-    background-color: #e2e2e275;
+    background-color: var(--background-third);
     text-align: center;
     text-decoration: none;
     vertical-align: middle;
