Fixing button bug for filter #21

--- a/src/components/mapParameters/MapParameters.css
+++ b/src/components/mapParameters/MapParameters.css
@@ -7,9 +7,13 @@
 }
 
 .form-submit {
-    margin-right: 5px;
+    margin-right: 10px;
 }
 
 .form-input {
     width: 80%;
+}
+
+.form {
+    margin-bottom: 10px;
 }
